--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -5,9 +5,14 @@
   float: left;
   height: 200px;
   margin: 1rem;
+  padding: 5px;
   position: relative;
   width: 250px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+
+button {
+  margin: 10px;
 }
 
 /*
