--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <a [routerLink]="['/']">
-  <h1>QuMart</h1>
+  <h1><img src="../../assets/fav.png" height="52"> QuMart</h1>
 </a>
 
 <a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
