--- a/src/styles.css
+++ b/src/styles.css
@@ -22,25 +22,6 @@ i.material-icons.md-light {
   color: rgba(255, 255, 255, 1); 
 }
 
-
-/* Text */
-
-h1 {
-  font-size: 32px;
-}
-
-h2 {
-  font-size: 20px;
-}
-
-h1, h2 {
-  font-weight: lighter;
-}
-
-p {
-  font-size: 14px;
-}
-
 /* Hyperlink */
 
 a {
@@ -50,7 +31,8 @@ a {
 }
 
 a:hover {
-  opacity: 0.8;
+  opacity: 0.8;  
+  text-decoration: none;
 }
 
 /* Input */
