add cart component

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,22 +1,18 @@
 <h2>Products</h2>
 
-<!-- Repeat a div for each product -->
 <div *ngFor="let product of products; index as productId" class="productListing">
   <h3>
     <a [title]="product.name + ' details'" [routerLink]="['/products', productId]">
-    {{product.name}}
+      {{product.name}}
     </a>
-  </h3>  
+  </h3>
 
-  <!-- On click, execution the share function -->
   <button (click)="share(product.name)"><i class="material-icons md-light">share</i>
     Share
   </button>
 
   <!-- Add the product alert component and pass in the current product -->
-  <app-product-alerts 
-  [product]="product"
-  (notify)="onNotify(product.name)">
+  <app-product-alerts [product]="product" (notify)="onNotify(product.name)">
   </app-product-alerts>
 
 </div>
