--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,8 +4,24 @@
   <a routerLink="/shipping">Shipping Prices</a>
 </p>
 
+<div *ngIf="items.length == 0">
+  <p>You have no items in your cart</p>
+</div>
 
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }}</span>
-  <span>{{ item.price | currency }}</span>
+  <span>{{ item.price | currency }}</span>  
 </div>
+
+<form *ngIf="items.length != 0" [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
+  <h3>Checkout</h3>
+  <div>
+    <label for="name">Name</label>
+    <input id="name" type="text" formControlName="name">
+  </div>
+  <div>
+    <label for="address">Address</label>
+    <input id="address" type="text" formControlName="address">
+  </div>
+  <button class="button" type="submit">Purchase</button>
+</form>
