add Angular Material

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body { height: 100%; }
+body { margin: 0; }
+
 .appContainer {
   display: flex;
   flex-direction: row;
