--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,8 @@
   <h1><img src="assets/fav.png" height="52"> QuMart</h1>
 </a>
 
-<a [routerLink]="['/cart']" class="button fancy-button"><i class="material-icons">shopping_cart</i>Checkout</a>
+<a [routerLink]="['/cart']" class="button fancy-button" matBadgeColor="warn" matBadge={{count}} matBadgePosition="before">
+  <mat-icon>shopping_cart</mat-icon>View Cart</a>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
