--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,9 @@
 /* Global Styles */
 
-* {
-  font-family: 'Roboto', Arial, sans-serif;  
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 html, body { 
   height: 100%; 
-}
-
-body { 
   margin: 0; 
-  color: #616161;
+  font-family: 'Roboto', Arial, sans-serif;   
 }
 
 .appContainer {
@@ -26,15 +16,11 @@ router-outlet + *  {
   padding: 0 16px;
 }
 
-i.material-icons.md-light { 
-  color: rgba(255, 255, 255, 1); 
-}
-
 /* Hyperlink */
 
 a {
   cursor: pointer;
-  color: #1976d2;
+  color: #007bff;
   text-decoration: none;
 }
 
@@ -61,47 +47,12 @@ label {
   text-transform: uppercase;
 }
 
-/* Button */
-.button, button {
-  display: inline-flex;
-  align-items: center;
-  padding: 8px 16px;
-  border-radius: 2px;
-  font-size: 14px;
-  cursor: pointer;
-  background-color: #1976d2;
-  color: white;
-  border: none;  
-}
-
-.button:hover, button:hover {
-  opacity: 0.8;
-  font-weight: normal;
-}
-
-.button:disabled, button:disabled {
-  opacity: 0.5;
-  cursor: auto;
-}
-
-/* Fancy Button */
-
-.fancy-button {
-  background-color: white;
-  color: #1976d2;  
-}
-
-.fancy-button i.material-icons {
-  color: #1976d2;
-  padding-right: 4px;
-}
-
 /* Top Bar */
 
 app-top-bar {
   width: 100%;
   height: 68px;
-  background-color: #1976d2;
+  background-color: #007bff;
   padding: 16px;
   display: flex;
   flex-direction: row;
