--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,6 +5,6 @@
 	<h5>{{ product.price | currency }}</h5>
 	<p>{{ product.description }}</p>
 
-	<button (click)="addToCart(product)">Add to Cart</button>
+	<button type="button" class="btn btn-primary" (click)="addToCart(product)"><mat-icon>shopping_cart</mat-icon> Add to Cart</button>
 
 </div>
