--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+<nav class="navbar navbar-dark">
   <div class="navbar-nav mr-auto">
     <a class="navbar-brand" [routerLink]="['/']">
       <h1><img src="assets/fav.png" height="52"> QuMart</h1>
