--- a/src/styles.css
+++ b/src/styles.css
@@ -6,11 +6,11 @@ html, body {
   font-family: 'Roboto', Arial, sans-serif;   
 }
 
-.appContainer {
+/* .appContainer {
   display: flex;
   flex-direction: row;
   padding-top: 16px;
-}
+} */
 
 router-outlet + *  {
   padding: 0 16px;
