make details page responsive on mobile

--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -1,3 +1,12 @@
 .product-price {
     color: #B12704;
 }
+
+.product-details {
+    margin: 20px;
+}
+
+.product-details > img {
+    width: 95%;
+    max-width: 500px;
+}
