--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,27 +1,32 @@
-<h2>Cart</h2>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md">
+      <h2>Cart</h2>
 
-<p>
-  <a routerLink="/shipping">Shipping Prices</a>
-</p>
+      <p>
+        <a routerLink="/shipping">Shipping Prices</a>
+      </p>
 
-<div *ngIf="items.length == 0">
-  <p>You have no items in your cart</p>
-</div>
+      <div *ngIf="items.length == 0">
+        <p>You have no items in your cart</p>
+      </div>
 
-<div class="cart-item" *ngFor="let item of items">
-  <span>{{ item.name }}</span>
-  <span>{{ item.price | currency }}</span>  
-</div>
+      <ul class="list-group cart-items" *ngIf="items.length != 0">
+        <li class="list-group-item d-flex justify-content-between align-items-center cart-item"
+          *ngFor="let item of items">
+          <span>{{ item.name }}</span>
+          <span>{{ item.price | currency }}</span>
+          <!-- Eventually, use this to note how many of each item are in cart
+            <span class="badge badge-secondary badge-pill">2</span> -->
+        </li>
+        <li class="list-group-item list-group-item-success cart-total">
+          <span>Total before shipping:   {{ totalPrice | currency }}</span>
+        </li>
+      </ul>
+    </div>
 
-<form *ngIf="items.length != 0" [formGroup]="checkoutForm" (ngSubmit)="onSubmit(checkoutForm.value)">
-  <h3>Checkout</h3>
-  <div>
-    <label for="name">Name</label>
-    <input id="name" type="text" formControlName="name">
+    <div class="col-md" *ngIf="items.length != 0">
+      <app-checkout></app-checkout>
+    </div>
   </div>
-  <div>
-    <label for="address">Address</label>
-    <input id="address" type="text" formControlName="address">
-  </div>
-  <button class="button" type="submit">Purchase</button>
-</form>
+</div>
