--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -25,7 +25,7 @@
       </ul>
     </div>
 
-    <div class="col-md">
+    <div class="col-md" *ngIf="items.length != 0">
       <app-checkout></app-checkout>
     </div>
   </div>
