--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,7 +1,10 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md">
-      <h2>Cart</h2>
+    <div class="col-md-6">
+      <h2 class="d-flex justify-content-between align-items-center mb-3">
+        <span>Cart</span>
+        <span class="badge badge-secondary badge-pill">{{items.length}}</span>
+      </h2>
 
       <p>
         <a routerLink="/shipping">Shipping Prices</a>
@@ -19,13 +22,14 @@
           <!-- Eventually, use this to note how many of each item are in cart
             <span class="badge badge-secondary badge-pill">2</span> -->
         </li>
-        <li class="list-group-item list-group-item-success cart-total">
-          <span>Total before shipping:   {{ totalPrice | currency }}</span>
+        <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-success cart-total">
+          <span>Total before shipping: </span>
+          <span>{{ totalPrice | currency }}</span>
         </li>
       </ul>
     </div>
 
-    <div class="col-md" *ngIf="items.length != 0">
+    <div class="col-md-6" *ngIf="items.length != 0">
       <app-checkout></app-checkout>
     </div>
   </div>
