--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -20,6 +20,12 @@
             <mat-error *ngIf="!checkoutForm.get('email').valid">{{getError('email')}}</mat-error>
         </mat-form-field>
     </div>
+    <div>
+        <label>Shipping: </label>
+        <mat-radio-group formControlName="shipping">
+            <mat-radio-button *ngFor="let option of shipping" [value]="option.type" [matTooltip]="'$'+option.price">{{option.type}}</mat-radio-button>
+        </mat-radio-group>
+    </div>
     <div formGroupName="addressForm">
         <div>
             <mat-form-field appearance="outline" class="wideField">
@@ -62,6 +68,7 @@
     </div>
 </form>
 <div>
-    <button type="button" class="btn btn-primary btn-lg purchaseBtn" (click)="submitForm()" [disabled]="!checkoutForm.valid">
+    <button type="button" class="btn btn-primary btn-lg purchaseBtn" (click)="submitForm()"
+        [disabled]="!checkoutForm.valid">
         Purchase</button>
 </div>
