re-add hide checkout when cart empty

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
 
-    <div class="col-md-6">
+    <div class="col-md-6" *ngIf="items.length != 0">
       <app-checkout></app-checkout>
     </div>
   </div>
