--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -6,8 +6,8 @@
         <span class="badge badge-secondary badge-pill">{{items.length}}</span>
       </h2>
 
-      <div *ngIf="items.length == 0">
-        <p>You have no items in your cart</p>
+      <div *ngIf="items.length == 0" class="alert alert-warning" role="alert">
+        You have no items in your cart
       </div>
 
       <ul class="list-group cart-items" *ngIf="items.length != 0">
@@ -16,7 +16,7 @@
           <span>{{ item.name }}</span>
           <span>{{ item.price | currency }}</span>
         </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-success cart-total">
+        <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-success">
           <span>Total before shipping: </span>
           <span>{{ totalPrice | currency }}</span>
         </li>
