rm alerts, share. Change btns to mat. Add to cart on view page

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -29,7 +29,7 @@
           </tr>
           <tr class="table-success">
             <td colspan="3">Total including shipping:</td>
-            <td colspan="1"> $placeholder </td>
+            <td colspan="1"> $PLACEHOLDER </td>
           </tr>
         </tbody>
       </table>     
