--- a/src/app/cart/checkout/checkout.component.html
+++ b/src/app/cart/checkout/checkout.component.html
@@ -68,7 +68,7 @@
     </div>
 </form>
 <div>
-    <button type="button" class="btn btn-primary btn-lg purchaseBtn" (click)="submitForm()"
+    <button type="button" mat-raised-button color="primary" class="purchaseBtn" (click)="submitForm()"
         [disabled]="!checkoutForm.valid">
         Purchase</button>
 </div>
