--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,9 +1,15 @@
 .productListing  {
   width: 250px;
+  min-height:405px;
   margin: 1rem;
   padding: 5px;
   float: left;  
   text-align: center;
+}
+
+.productImg {
+  max-width:85%;
+  margin:auto;
 }
 
 button {
