--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -11,3 +11,7 @@
     </button>
   </div>
 </nav>
+
+<div class="alert alert-secondary text-center" role="alert">
+  Free shipping on orders of $50 or more!
+</div>
