--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -52,7 +52,7 @@
           </mat-radio-button>
         </mat-radio-group>
       </div>
-      <div *ngIf="selectedShipping">
+      <div *ngIf="selectedShipping !== null">
         <hr>
         <app-checkout></app-checkout>
       </div>
